--- a/ProyectoDAS/Views/Categoria/Eliminar.cshtml
+++ b/ProyectoDAS/Views/Categoria/Eliminar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProyectoDAS.Models.Categoria
 @{
-    ViewData["Title"] = "Crear";
+    ViewData["Title"] = "Eliminar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -18,20 +18,23 @@
 
 <div class="fondo-amarillo">
 
-    <form method="post" asp-action="Crear">
+    <form method="post" asp-action="Eliminar">
+
         <div class="border p-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group row mt-4 text-end">
-                <h2 class="pl-4" style="color: #003399;">Nueva Categoría </h2>
+                <h2 class="pl-4" style="color: #003399;">Editar Categoría </h2>
             </div>
 
             <div class="container">
+
+                <input type="hidden" asp-for="Id" />
+
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <label asp-for="Nombre" class="form-label">Nombre Categoría</label>
-                        <input asp-for="Nombre" class="form-control" />
-                        <span asp-validation-for="Nombre" class="text-danger"></span>
+                        <input asp-for="Nombre" disabled class="form-control" />
                     </div>
                 </div>
 
@@ -39,15 +42,14 @@
                     <div class="col-md-6">
                         <label asp-for="EsActivo" class="form-label d-block">¿Está Activa?</label>
                         <div class="form-check">
-                            <input asp-for="EsActivo" class="form-check-input" />
-                            <span asp-validation-for="EsActivo" class="text-danger"></span>
+                            <input asp-for="EsActivo" disabled class="form-check-input" />
                         </div>
                     </div>
                 </div>
 
                 <div class="d-grid gap-2 d-md-block">
-                    <button type="submit" class="btn text-white" style="background-color: #003399;">
-                        Crear Categoría
+                    <button type="submit" class="btn btn-primary text-white" style="background-color: #003399;">
+                        Eliminar Categoría
                     </button>
                     <a asp-controller="Categoria" asp-action="Index" class="btn btn-success">
                         Regresar
@@ -59,4 +61,8 @@
     </form>
 </div>
 
-
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
