--- a/ProyectoDAS/Views/Clientes/Index.cshtml
+++ b/ProyectoDAS/Views/Clientes/Index.cshtml
@@ -34,7 +34,13 @@
                 <h2 style="color: #003A8C;">Clientes</h2>
             </div>
         </div>
-
+        <div class="col-6">
+            <a asp-controller="Clientes" asp-action="Crear"
+               class="btn text-white"
+               style="background-color: #003399;">
+                Nuevo Cliente
+            </a>
+        </div>
 
         <br />
 
